<!--
  ~ Watr. Android application
  ~ Copyright (c) 2020 Linus Willner, Panu Eronen and Markus Hartikainen.
  ~ Licensed under the MIT license.
  -->

<resources>
  <string name="app_name">Watr</string>
  <string name="navigation_history_button">History</string>
  <string name="navigation_home_button">Home</string>
  <string name="navigation_settings_button">Settings</string>
  <string name="ingested_liquid_amount_default_value">Loading…</string>
  <string name="target_liquid_amount_default_value">Loading…</string>
  <string name="context_message_default_value">Loading…</string>
  <string name="last_ingestion_default_value">Last fluid ingestion: Loading…</string>
  <string name="action_button_hint_default_value">Loading…</string>
  <string name="hydration_record_list_item_default_value">Loading…</string>
  <string name="ingestion_amount_hint">Ingested amount in millilitres…</string>
  <string name="hydration_record_title">Let\'s get your drink logged!</string>
  <string name="hydration_record_ingested_liquid_type">What did you drink?</string>
  <string name="hydration_record_ingested_liquid_amount">How much of it did you drink? (ml)</string>
  <string name="hydration_record_save_hint">All good, click to log hydration!</string>
  <string name="hydration_record_save_hint_error">Cannot save while a field value is incorrect!</string>
  <string name="history_page_title_awake">Liquids ingested today</string>
  <string name="history_page_title_asleep">Liquids ingested during the past day</string>
  <string name="home_page_action_button_hint_awake">Ready to log hydration!</string>
  <string name="home_page_action_button_hint_asleep">Your current activity period is ASLEEP, so you cannot log hydration right now.</string>
  <string name="context_message_asleep">Good work on staying hydrated today. Sweet dreams!</string>
  <string name="context_message_no_records_today">You haven\'t recorded any hydration for today!</string>
  <string name="context_message_hydration_remembered">You\'re on track towards your daily target!</string>
  <string name="context_message_hydration_forgotten">You\'re at risk of dehydration!</string>
  <string name="context_message_hydration_target_achieved">You\'ve reached your daily target! Nice work!</string>
  <string name="radiobuttonMale">Male</string>
  <string name="radiobuttonFemale">Female</string>
  <string name="user_profile_settings_title">User profile settings</string>
  <string name="user_profile_settings_gender_selector_title">Gender</string>
  <string name="user_profile_settings_gender_selector_male">Male</string>
  <string name="user_profile_settings_gender_selector_female">Female</string>
  <string name="user_profile_settings_daily_target_title">Daily target (ml)</string>
  <string name="user_profile_settings_daily_target_input">Input daily target…</string>
  <string name="user_profile_settings_daily_target_update_button">Update</string>
  <string name="user_profile_settings_wake_and_bed_time_title">Wake up and bed time</string>
  <string name="user_profile_settings_wake_and_bed_time_increase_hour_content_description">Hour increase button</string>
  <string name="user_profile_settings_wake_and_bed_time_hour_default_value">0</string>
  <string name="user_profile_settings_wake_and_bed_time_decrease_hour_button_content_description">Decrease hour button</string>
  <string name="user_profile_settings_wake_and_bed_time_increase_minute_content_description">Increase minute button</string>
  <string name="user_profile_settings_wake_and_bed_time_minute_default_value">0</string>
  <string name="user_profile_settings_wake_and_bed_time_decrease_minute_content_description">Decrease minute button</string>
  <string name="user_profile_settings_wake_and_bed_time_set_wake_time_button">Set wake time</string>
  <string name="user_profile_settings_wake_and_bed_time_set_bed_time_button">Set bed time</string>
  <string name="user_profile_settings_current_wake_time_display_default_value">Wake time: Loading…</string>
  <string name="user_profile_settings_current_bed_time_display_default_value">Bed time: Loading…</string>
  <string name="user_profile_settings_clock_12_hour_modifier" />
  <string name="about_app_logo_content_description">Application logo</string>
  <string name="app_settings_clock_switch_title">Use 24h clock</string>
  <string name="app_settings_unit_switch_title">Use metric units</string>
  <string name="app_settings_title">Application settings</string>
  <string name="app_settings_measurement_controls_title">Measurement settings</string>
  <string name="about_title">About</string>
  <string name="about_app_title">Watr. Android application</string>
  <string name="about_app_copyright">Copyright © 2020 Linus Willner, Panu Eronen and Markus Hartikainen.</string>
  <string name="about_app_license">Licensed under the MIT license.</string>
  <string name="about_app_location">Metropolia University of Applied Sciences, Mobile Health Applications course</string>
  <string name="about_app_location_time">Autumn 2020</string>
  <string name="setup_confirm_button_title">Done, get me started!</string>
  <string name="setup_minutes_field_default_value">mm</string>
  <string name="setup_hours_field_default_value">hh</string>
  <string name="setup_wake_time_title">When do you get up? (hh:mm):</string>
  <string name="setup_bed_time_title">When do you go to bed? (hh:mm):</string>
  <string name="setup_title">Welcome to Watr!</string>
  <string name="setup_subtitle">Let\'s get you up and going.</string>
  <string name="setup_unit_controls_title">First, please tell me what units and time format you would like to use.</string>
  <string name="setup_gender_controls_title">Next, please tell me a few things about yourself.</string>
  <string name="setup_gender_controls_subtitle">What is your biological gender?</string>
  <string name="setup_gender_controls_disclaimer">This is only used to set your default daily hydration target. You can always change it later.</string>
  <string name="setup_time_controls_title">Finally, please tell me just a few things about your daily routine.</string>
  <string name="setup_metric_switch">Use metric units</string>
  <string name="setup_clock_switch">Use 24h clock</string>
</resources>