<?xml version="1.0" encoding="utf-8"?><!--
  ~ Watr. Android application
  ~ Copyright (c) 2020 Linus Willner, Panu Eronen and Markus Hartikainen.
  ~ Licensed under the MIT license.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <Button
    android:id="@+id/setupConfirmButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:backgroundTint="@color/colorAccent"
    android:onClick="onConfirm"
    android:text="@string/setup_confirm_button_title"
    android:textColor="@color/colorTextWhite"
    app:layout_constraintEnd_toStartOf="@+id/verticalInnerRightGuideline"
    app:layout_constraintStart_toStartOf="@+id/verticalInnerLeftGuideline"
    app:layout_constraintTop_toBottomOf="@+id/wakeMinuteInput" />
  <EditText
    android:id="@+id/wakeMinuteInput"
    android:layout_width="71dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:ems="10"
    android:gravity="center"
    android:hint="@string/setup_minutes_field_default_value"
    android:importantForAutofill="no"
    android:inputType="number"
    app:layout_constraintEnd_toStartOf="@+id/verticalMiddleGuideline"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toEndOf="@+id/wakeHourInput"
    app:layout_constraintTop_toBottomOf="@+id/setupWakeTitle" />
  <EditText
    android:id="@+id/wakeHourInput"
    android:layout_width="71dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:ems="10"
    android:gravity="center"
    android:hint="@string/setup_hours_field_default_value"
    android:importantForAutofill="no"
    android:inputType="number"
    app:layout_constraintStart_toStartOf="@+id/setupWakeTitle"
    app:layout_constraintTop_toBottomOf="@+id/setupWakeTitle" />
  <EditText
    android:id="@+id/sleepMinuteInput"
    android:layout_width="71dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:ems="10"
    android:gravity="center"
    android:hint="@string/setup_minutes_field_default_value"
    android:importantForAutofill="no"
    android:inputType="number"
    app:layout_constraintEnd_toEndOf="@+id/setupBedTitle"
    app:layout_constraintTop_toBottomOf="@+id/setupBedTitle" />
  <EditText
    android:id="@+id/sleepHourInput"
    android:layout_width="71dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:ems="10"
    android:gravity="center"
    android:hint="@string/setup_hours_field_default_value"
    android:importantForAutofill="no"
    android:inputType="number"
    app:layout_constraintEnd_toStartOf="@+id/sleepMinuteInput"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/verticalMiddleGuideline"
    app:layout_constraintTop_toBottomOf="@+id/setupBedTitle" />
  <RadioGroup
    android:id="@+id/setupGenderSelector"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:layout_constraintEnd_toStartOf="@+id/verticalInnerRightGuideline"
    app:layout_constraintHorizontal_bias="0.471"
    app:layout_constraintStart_toStartOf="@+id/verticalInnerLeftGuideline"
    app:layout_constraintTop_toBottomOf="@+id/setupGenderDisclaimer">
    <RadioButton
      android:id="@+id/setupGenderMale"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:checked="true"
      android:text="@string/radiobuttonMale" />
    <RadioButton
      android:id="@+id/setupGenderFemale"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/radiobuttonFemale" />
  </RadioGroup>
  <Switch
    android:id="@+id/setupMetricSwitch"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="8dp"
    android:checked="true"
    android:text="@string/setup_metric_switch"
    app:layout_constraintEnd_toStartOf="@+id/verticalMiddleGuideline"
    app:layout_constraintStart_toStartOf="@+id/verticalOuterLeftGuideline"
    app:layout_constraintTop_toBottomOf="@+id/setupFormatTitle"
    tools:ignore="UseSwitchCompatOrMaterialXml" />
  <Switch
    android:id="@+id/setupClockSwitch"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="16dp"
    android:checked="true"
    android:text="@string/setup_clock_switch"
    app:layout_constraintEnd_toStartOf="@+id/verticalOuterRightGuideline"
    app:layout_constraintStart_toStartOf="@+id/verticalMiddleGuideline"
    app:layout_constraintTop_toBottomOf="@+id/setupFormatTitle"
    tools:ignore="UseSwitchCompatOrMaterialXml" />
  <TextView
    android:id="@+id/setupWakeTitle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:gravity="center"
    android:text="@string/setup_wake_time_title"
    android:textSize="16sp"
    app:layout_constraintEnd_toStartOf="@+id/verticalMiddleGuideline"
    app:layout_constraintStart_toStartOf="@+id/setupRoutineTitle"
    app:layout_constraintTop_toBottomOf="@+id/setupRoutineTitle" />
  <TextView
    android:id="@+id/setupBedTitle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:gravity="center"
    android:text="@string/setup_bed_time_title"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="@+id/setupRoutineTitle"
    app:layout_constraintStart_toStartOf="@+id/verticalMiddleGuideline"
    app:layout_constraintTop_toBottomOf="@+id/setupRoutineTitle" />
  <TextView
    android:id="@+id/setupTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="48dp"
    android:text="@string/setup_title"
    android:textColor="@color/colorText"
    android:textSize="30sp"
    app:layout_constraintEnd_toStartOf="@+id/verticalOuterRightGuideline"
    app:layout_constraintStart_toStartOf="@+id/verticalOuterLeftGuideline"
    app:layout_constraintTop_toTopOf="parent" />
  <TextView
    android:id="@+id/setupFormatTitle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/setup_unit_controls_title"
    android:textAlignment="center"
    android:textColor="@color/colorText"
    android:textSize="18sp"
    app:layout_constraintEnd_toStartOf="@+id/verticalOuterRightGuideline"
    app:layout_constraintStart_toStartOf="@+id/verticalOuterLeftGuideline"
    app:layout_constraintTop_toTopOf="@+id/formatControlsGuideline" />
  <TextView
    android:id="@+id/setupGenderTitle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="@string/setup_gender_controls_title"
    android:textAlignment="center"
    android:textColor="@color/colorText"
    android:textSize="18sp"
    app:layout_constraintEnd_toStartOf="@+id/verticalOuterRightGuideline"
    app:layout_constraintStart_toStartOf="@+id/verticalOuterLeftGuideline"
    app:layout_constraintTop_toBottomOf="@+id/setupMetricSwitch" />
  <TextView
    android:id="@+id/setupGenderSubtitle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="18dp"
    android:text="@string/setup_gender_controls_subtitle"
    android:textAlignment="center"
    android:textSize="16sp"
    app:layout_constraintEnd_toStartOf="@+id/verticalInnerRightGuideline"
    app:layout_constraintStart_toStartOf="@+id/verticalInnerLeftGuideline"
    app:layout_constraintTop_toBottomOf="@+id/setupGenderTitle" />
  <TextView
    android:id="@+id/setupGenderDisclaimer"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/setup_gender_controls_disclaimer"
    android:textAlignment="center"
    app:layout_constraintEnd_toStartOf="@+id/verticalInnerRightGuideline"
    app:layout_constraintStart_toStartOf="@+id/verticalInnerLeftGuideline"
    app:layout_constraintTop_toBottomOf="@+id/setupGenderSubtitle" />
  <TextView
    android:id="@+id/setupRoutineTitle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="@string/setup_time_controls_title"
    android:textAlignment="center"
    android:textColor="@color/colorText"
    android:textSize="18sp"
    app:layout_constraintEnd_toStartOf="@+id/verticalOuterRightGuideline"
    app:layout_constraintStart_toStartOf="@+id/verticalOuterLeftGuideline"
    app:layout_constraintTop_toBottomOf="@+id/setupGenderSelector" />
  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/verticalOuterLeftGuideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.05" />
  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/verticalOuterRightGuideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.95" />
  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/formatControlsGuideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.15" />
  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/verticalInnerLeftGuideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.15" />
  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/verticalInnerRightGuideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.85" />
  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/routineControlsGuideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.62" />
  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/verticalMiddleGuideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>