<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Watr. Android application
  ~ Copyright (c) 2020 Linus Willner, Panu Eronen and Markus Hartikainen.
  ~ All rights reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <androidx.viewpager2.widget.ViewPager2
    android:id="@+id/viewPager"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toTopOf="@+id/navigationBar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
  <com.google.android.material.tabs.TabLayout
    android:id="@+id/navigationBar"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/viewPager"
    app:tabIndicatorColor="@color/colorPrimary">

    <com.google.android.material.tabs.TabItem
      android:id="@+id/historyTabButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/navigation_history_button" />

    <com.google.android.material.tabs.TabItem
      android:id="@+id/homeTabButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/navigation_home_button" />
    <com.google.android.material.tabs.TabItem
      android:id="@+id/settingsTabButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/navigation_settings_button" />
  </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>